# M.S-P.P

./: .gitmodules  README.md  temp.dotx
Data mining/proj/codes/: README.txt  exec.r  load_data.r  nb.r  svm.r  tree.r
Data mining/proj/pres/: dm.tex
Data mining/proj/report/: Report-final.tex
Evolutionary Computing/asgn/es/: CMakeLists.txt  ESPP.pro  (+1 more)
Evolutionary Computing/asgn/tsp/version1/: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  data.cache  dependency.json  ga.tsp.pro  iplot.m  main.cpp  main.helper.hpp  us.data.cache
Evolutionary Computing/asgn/tsp/version1/inc/: Timer.hpp  chromosome.hpp  data.hpp  gaConfig.hpp  population.hpp  stdafx.hpp  utils.hpp
Evolutionary Computing/asgn/tsp/version1/res/zi1/: config.json  cout  tsp_plot_output.m
Evolutionary Computing/asgn/tsp/version1/src/: population.cpp
Evolutionary Computing/asgn/tsp/version1/test/: .gitignore  CMakeLists.txt  README.md  manifest.hpp  test.pro
Evolutionary Computing/asgn/tsp/version1/test/TestCases/: chromosomeTestCase.hpp  dataTestCase.hpp  gaConfigTestCase.hpp  populationTestCase.hpp
Evolutionary Computing/pres/: LEM.pptx
Evolutionary Computing/proj/: README.md  dem_elit_selection.m  dem_mutation.m  dem_stat.m  dem_xover.m  fitfunc.m  gen_genes.m  init.m  iplot.m  lem.m  lem_darwinian_mode.m  lem_learn_mode.m  mlm_desc.m  mlm_fetchXgroups.m  mlm_gen.m  mlm_getDesc.m  mlm_getDesc_NN.m  mlm_stat.m
Fuzzy Systems/seminar/: FPL.tex  reference.bib
Machine Learning/exec# 1/: weka
Machine Learning/final/: bootstraper_train.m  disp_error_map.m  normalize_data.m  pd2.print  test_script.m  train_logistic.m
Machine Learning/second-try/: .gitignore
Machine Learning/seminar/: .gitignore  ml.pptx  report.docx
Neural Network/assignments/nntak1/: .gitignore  CMakeLists.txt  dependency.json  main.cpp  nntak1.pro
Neural Network/assignments/nntak1/data/test/: labels.mat
Neural Network/assignments/nntak1/inc/: load_mat.hpp  main.helper.hpp  nnconf.hpp  nnet.hpp  stdafx.hpp
Neural Network/assignments/nntak1/logs/: plot_details.m  plot_diffs.m
Neural Network/assignments/nntak1/report/: report.tex
Neural Network/assignments/nntak1/src/: nnet.cpp
Neural Network/assignments/nntak1/vendors/eigen/: .hg_archival.txt
Neural Network/seminar/: reference.bib  slides.tex
Pattern/seminar/: reference.bib  slides.tex
Robotic/exec#1/: .gitignore
Robotic/exec#2/: .gitignore
Robotic/seminar/: report.docx  robotix.pptx
Thesis/proposal/: reference.bib
(+233 files in other folders)
